test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_bitwise_negation_literal.sol
contract C layout at ~0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFE {}
// ----
// TypeError 1763: (21-88): Storage layout cannot be specified by a number exceeding the range of type uint256. Current type is int_const -115...(71 digits omitted)...9935 Cannot implicitly convert signed literal to unsigned type.
